--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
     <main>
         <section id="login">
             <div id="imagem">
+                <!--aqui vai a imagem pela css-->
 
             </div>
             <div id="formulario">
                <h1>Login</h1>
-               <p>Seja bem vindo(a) novamente, Faça o login para acessar sua conta e fzer as configurações no seu ambiente. </p>
+               <p>Seja bem vindo(a) novamente, Faça o login para acessar sua conta e fazer as configurações no seu ambiente. </p>
                <form action="login.php" method="post">
-                
+
                </form>
 
             </div>
