--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
     <main>
@@ -18,7 +19,23 @@
                <h1>Login</h1>
                <p>Seja bem vindo(a) novamente, Faça o login para acessar sua conta e fazer as configurações no seu ambiente. </p>
                <form action="login.php" method="post">
+                <div class="campo">
+                    <span class="material-symbols-outlined">
+                    contact_mail</span>
 
+                    <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
+
+                    <label for="ilogin">Login</label>
+                </div>
+                <div class="campo">
+                    <span class="material-symbols-outlined">vpn_key</span>
+
+                    <input type="password" name="senha" id="isenha" placeholder=" sua senha" autocomplete="current-password" required minlength="8" maxlength="20" >
+
+                    <label for="isenha">senha</label>
+                </div>
+                <input type="submit" value="Entrar">
+                <a href="#" class="botao">Esqueci a senha <i class="material-symbols-outlined">mail</i></a>
                </form>
 
             </div>
